--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     /* background color */
     background-color: #ff0026;
 }
-
+/* BUILD */
 /* container */
 .container {
     background-color: #171821;
